Add form fields and integrate form submission

--- a/source/stylesheets/app.scss
+++ b/source/stylesheets/app.scss
@@ -1,7 +1,1 @@
-body {
-  font: 400 62.5%/160% 'Open Sans', sans-serif;
-}
-
-main {
-  font-size: 1.4em;
-}
+@import "bower_components/bootstrap/scss/bootstrap-flex.scss"
