Convert to pop-up for same-origin API interaction

--- a/source/stylesheets/new_ticket.scss
+++ b/source/stylesheets/new_ticket.scss
@@ -1,3 +1,12 @@
 .NewTicket {
-  padding-top: 16px;
+  padding: {
+    top: 16px;
+    bottom: 16px;
+  }
+
+  button.close {
+    position: absolute;
+    top: 12px;
+    right: 10px;
+  }
 }
