--- a/source/stylesheets/components/new_card_form.scss
+++ b/source/stylesheets/components/new_card_form.scss
@@ -1,4 +1,33 @@
 .TrelloNewCardForm {
+  .form-group > div > .form-control,
+  .form-group > div > select,
+  .screenshots {
+    color: #4d4d4d;
+    border: 1px solid #cdd2d4;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.33);
+
+    &:focus { border-color: #cdd2d4; }
+  }
+
+  .screenshots li {
+    border: {
+      right: none;
+      bottom: none;
+      left: none;
+    }
+
+    &:first-child { border-top: none; }
+  }
+
+  textarea {
+    min-height: 75px;
+    padding: 9px 11px 0;
+    box-sizing: border-box;
+
+    resize: none;
+  }
+
   button[type="submit"] {
     vertical-align: top;
 
